--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Assets\Scripts\CameraShake\CameraShake.cs" />
     <Compile Include="Assets\Scripts\CameraShake\ShakeTransform2.cs" />
     <Compile Include="Assets\Scripts\CameraShake\ShakeTransformEventData2.cs" />
+    <Compile Include="Assets\Scripts\Interact\DragObject.cs" />
+    <Compile Include="Assets\Scripts\Interact\InteractiveObject.cs" />
     <Compile Include="Assets\Scripts\Player\PickupProp.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerLook.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMove.cs" />
@@ -630,7 +632,12 @@
       <HintPath>D:/GitProject/SteelerV2/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{04E24536-F4D5-5622-A03B-1B8AEC6D2C4B}</Project>
+      <Name>Assembly-CSharp-firstpass</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
